[project]
name = "poetry-demo"
version = "0.1.1"
description = ""
authors = [
    {name = "projectstreaming95",email = "projectstreaming95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "selenium >=4.20.0"
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
